tests/expectations/compiler/console/assert_fail.out
Error [EPAR0370005]: expected ',' -- found ')'
    --> compiler-test:3:27
     |
   3 |         assert_eq(a == 1u8);
     |                           ^
